--- a/Styles/main.css
+++ b/Styles/main.css
@@ -1,3 +1,7 @@
+media only screen and (max-width: 600px) {
+	body {
+    	background-color: lightblue;
+    }
 body {
   background: linear-gradient(90deg, rgba(255,106,0,1) 0%, rgba(255,221,0,1) 100%);
 }
