--- a/main.css
+++ b/main.css
@@ -40,3 +40,9 @@ li a {
 li a:hover {
   background-color: #ff7b07;
 }
+
+@media only screen and (max-width: 600px){
+  body {
+    background-color: lightblue;
+  }
+}
